--- a/scc-mvc/src/main/resources/templates/manageticket.html
+++ b/scc-mvc/src/main/resources/templates/manageticket.html
@@ -20,10 +20,7 @@
 
     <!-- Content Wrapper. Contains page content -->
     <div class="content-wrapper">
-        <!-- Content Header (Page header) -->
-        <section class="content-header">
 
-        </section>
 
         <!-- Main content -->
         <section class="content">
@@ -281,8 +278,8 @@
                             <div id="pageToCrawl"
                                  style="margin-top: 10px;margin-bottom: 10px;margin-left: 10px; background-color: white; padding: 10px 20px 20px 20px">
 
-                                <h2>
-                                    Ticket management
+                                <h2 style="border-bottom: 1px solid lightgray; padding-bottom: 15px">
+                                    Ticket Management
                                 </h2>
                                 <span id="topbtn" class="pull-right" style="margin-bottom: 10px">
                                     <button class="btn btn-info btn-md " type="button" onclick="configpriority()">
