Chỉnh lại logic và bảng brandpage. - Add page to manage -> BrandPage.crawl = 1, BrandPage.manage =1 - Add page to crawl       -> BrandPage.crawl = 1, BrandPage.manage =0 - Deactivate Page to manage  -> BrandPage.manage  = 0 - Deactivate Page to crawl        -> BrandPage.crawl        =  0 - Activate Page to manage        -> BrandPage.manage  = 1 - Activate Page to crawl             -> BrandPage.crawl         = 1
Set Interval cho Popup messenger là 3 giây

--- a/scc-mvc/src/main/resources/templates/crawl-page/index.html
+++ b/scc-mvc/src/main/resources/templates/crawl-page/index.html
@@ -34,11 +34,11 @@
                         <form id="managePageForm" action="deactivateCrawlerPage" method="post">
                             <input type="hidden" name="pageId" th:value="${pagesCrawler.pageid}"></input>
                             <td>
-                                <img th:src="@{'https://graph.facebook.com/' + ${pagesCrawler.pageid}+ '/picture'}"/>
+                                <img  th:src="@{'https://graph.facebook.com/' + ${pagesCrawler.pageid}+ '/picture'}" />
                             </td>
                             <td>
                                 <a th:href="@{'http://www.fb.com/' + ${pagesCrawler.pageid}}"
-                                   th:text="${pagesCrawler.name}"></a>
+                                   th:text="${pagesCrawler.name} " target="_blank"></a>
                             </td>
                             <td th:text="${pagesCrawler.type}"></td>
                             <td th:text="${pagesCrawler.category}"></td>
