Sửa lỗi giao diện của thằng Th

--- a/scc-mvc/src/main/resources/templates/customercare.html
+++ b/scc-mvc/src/main/resources/templates/customercare.html
@@ -421,7 +421,7 @@
                 </div>
             </div>
             <div class="postlist" id="post-list">
-                <div class="box-body chat" id="post-box">
+                <div class="box-body chat" id="post-box" style="margin:0">
                     <!--This is post list here-->
                 </div>
 
