sửa bugs check comment có phải ticket k

--- a/scc-mvc/src/main/resources/templates/customercare.html
+++ b/scc-mvc/src/main/resources/templates/customercare.html
@@ -435,11 +435,11 @@
                 <div>
                     <div class="col-lg-11" style="padding-left: 0px">
                         <img src="" alt="user image" id="post-image">
-                        <p class="author" id="post-author" style="color: cornflowerblue">Page name</p>
-                        <div id="post-time" class="text-muted" style="margin-left: 60px; margin-top: -10px">sss
+                        <p class="author" id="post-author" style="color: cornflowerblue"><span>-----</span></p>
+                        <div id="post-time" class="text-muted" style="margin-left: 60px; margin-top: -10px">-----
                         </div>
                         <p style="margin-top: 15px; word-wrap: break-word;" id="post-content">
-                            Content
+                            -----
                         </p>
                         <div style="color: gray">
                             <div class="inline" style="margin-right: 15px" id="post-like-count"><span
