message nào là ticket thì hiện icon ticket

--- a/scc-mvc/src/main/resources/templates/messenger/index.html
+++ b/scc-mvc/src/main/resources/templates/messenger/index.html
@@ -241,7 +241,9 @@
             </div>
 
             <!--Cot ben phai. Thong tin cua khach hang-->
-            <div class="col-md-3" id="customer-info" style="background-color: white; max-height: 90vh">
+            <div class="col-md-3" id="customer-info" style="background-color: white; height: 92vh">
+
+                <!--Thong tin khach hang-->
                 <div class="col-md-3 box box-primary" class="">
                     <div class="box-body box-profile">
                         <img  id="customer-picture"
@@ -274,6 +276,18 @@
                         <!--<a href="#" class="btn btn-primary btn-block"><b>Follow</b></a>-->
                     </div>
                     <!-- /.box-body -->
+                </div>
+
+                <!--Thong tin ticket-->
+                <div class="col-md-3 box box-primary" class="">
+                    <div class="box-body box-profile">
+                        <h1 class="customer-username text-center">Ticket</h1>
+                        <ul class="list-group list-group-unbordered">
+                            <li class="list-group-item" style="text-align: center">
+                                <a style="text-align: center" target="_blank"><b id="ticket-name">Select a message to see it's ticket</b></a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
 
