Brand report + fix bugs customer care + Xem comment nao cua user nao

--- a/scc-mvc/src/main/resources/templates/SideBar.html
+++ b/scc-mvc/src/main/resources/templates/SideBar.html
@@ -119,7 +119,7 @@
             </li>
             <!--View Report -->
             <li class="treeview">
-                <a href="#">
+                <a href="/brand/report">
                     <i class="fa fa-line-chart"></i>
                     <span>Report</span>
                     <span class="pull-right-container">
