--- a/scc-mvc/src/main/resources/templates/brand/report.html
+++ b/scc-mvc/src/main/resources/templates/brand/report.html
@@ -5,7 +5,10 @@
     <title>Brand infomation</title>
     <header class="main-header" th:include="Head::header"></header>
     <aside class="main-sidebar" th:include="SideBar::aside"></aside>
-
+    <script src="/js/Chart.bundle.js"></script>
+    <script>
+        fucntio
+    </script>
 
 </head>
 <body class="hold-transition skin-blue sidebar-mini">
@@ -102,7 +105,8 @@
 </div>
 
 </div>
-<script src="/js/Chart.bundle.js"></script>
+
+</body>
 <script>
     var options = {
         responsive: false,
@@ -140,5 +144,4 @@
     });
 
 </script>
-</body>
 </html>
