show assigner + assignee tren messsage

--- a/scc-mvc/src/main/resources/templates/messenger/index.html
+++ b/scc-mvc/src/main/resources/templates/messenger/index.html
@@ -277,14 +277,19 @@
                     </div>
                     <!-- /.box-body -->
                 </div>
-
                 <!--Thong tin ticket-->
-                <div class="col-md-3 box box-primary" class="">
+                <div class="col-md-3 box box-primary" class="" style="border-top: 2px solid lightblue;">
                     <div class="box-body box-profile">
                         <h1 class="customer-username text-center">Ticket</h1>
                         <ul class="list-group list-group-unbordered">
                             <li class="list-group-item" style="text-align: center">
-                                <a style="text-align: center" target="_blank"><b id="ticket-name">Select a message to see it's ticket</b></a>
+                                <a id="ticket-name-link" href="" style="text-align: center" target="_blank"><b id="ticket-name">Select a message to see it's ticket</b></a>
+                            </li>
+                            <li class="list-group-item">
+                                <b>Assigner</b> <a id="ticket-assigner" class="pull-right"></a>
+                            </li>
+                            <li class="list-group-item">
+                                <b>Assignee</b> <a id="ticket-assignee" class="pull-right"></a>
                             </li>
                         </ul>
                     </div>
